objects/RFP__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <formula>Opportunity__r.L2O_Bookings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Award_Date__c</fullName>
        <description>Date customer expects to make award</description>
        <inlineHelpText>Date customer expects to make award</inlineHelpText>
        <label>Anticipated Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Assessment__c</fullName>
        <label>Bid Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Consultant__c</fullName>
        <formula>TEXT(Opportunity__r.L2O_Benefit_Consultant_Involved_in_Deal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker / Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Objectives__c</fullName>
        <label>Client Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Relationship__c</fullName>
        <label>Client Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Account.L2O_Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Format__c</fullName>
        <label>Delivery Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>USB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Specified Due Date in the RFP</description>
        <inlineHelpText>Specified Due Date in the RFP</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Year_Revenue__c</fullName>
        <formula>Opportunity__r.L2O_Est_In_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Info__c</fullName>
        <label>Incumbent Info</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Incumbent__c</fullName>
        <label>Is Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Estimated Level of Effort for the Proposal</description>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Simple</fullName>
                </value>
                <value>
                    <fullName>2-Average</fullName>
                </value>
                <value>
                    <fullName>3-Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lives_Covered__c</fullName>
        <formula>Opportunity__r.L2O_Initial_of_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lives Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <formula>TEXT(Opportunity__r.L2O_Client_Line_of_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Time_Revenue__c</fullName>
        <formula>Opportunity__r.L2O_Est_One_Time_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Opportunity of the RFP</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_plan__c</fullName>
        <inlineHelpText>Created in Spark</inlineHelpText>
        <label>Opportunity plan?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Submission_Notes__c</fullName>
        <label>Post Submission Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFPs (Primary Contractor)</relationshipLabel>
        <relationshipName>RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Known__c</fullName>
        <description>Did you know about RFP before its release</description>
        <inlineHelpText>Did you know about RFP before its release?</inlineHelpText>
        <label>RFP Known</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Response_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes, Influenced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales user who has requested for the RFP. The default value for the field will be populated with the createduserid</description>
        <label>RFP Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Notes__c</fullName>
        <label>Red Flag Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_map__c</fullName>
        <label>Relationship map?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Date the RFP was released by customer</description>
        <inlineHelpText>Date the RFP was released by customer</inlineHelpText>
        <label>Release Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <description>Status of the proposal/response effort</description>
        <inlineHelpText>Status of the proposal/response effort</inlineHelpText>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>No-Bid</fullName>
                </value>
                <value>
                    <fullName>No-Bid Letter</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Expected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>Type of the Response</description>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                    <default>true</default>
                    <label>RFP</label>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Vendor Profile</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Effective_Date__c</fullName>
        <formula>TEXT(Opportunity__r.L2O_Revenue_Effective_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <formula>TEXT(Opportunity__r.L2O_Channel_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary but Significant Contributor (for large Proposals)</description>
        <inlineHelpText>Secondary but Significant Contributor (for large Proposals)</inlineHelpText>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Products / Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acute Care (Gen Med)</fullName>
                </value>
                <value>
                    <fullName>Chronic Condition Management</fullName>
                </value>
                <value>
                    <fullName>Complex Care</fullName>
                </value>
                <value>
                    <fullName>Enablement Care</fullName>
                </value>
                <value>
                    <fullName>Enablement (HHS)</fullName>
                </value>
                <value>
                    <fullName>HealthiestYou</fullName>
                </value>
                <value>
                    <fullName>Mental Health Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Specialty Care</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Actual ship date needed for proposal to arrive by due date</description>
        <inlineHelpText>Actual ship date needed for proposal to arrive by due date</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyLink__c</fullName>
        <formula>CASE(Owner:User.FirstName+&apos; &apos;+ Owner:User.LastName,
&apos;Tom Ownbey&apos;,&apos;https://www.surveymonkey.com/r/6P33BVJ&apos;,
&apos;Mary Solomon&apos;,&apos;https://www.surveymonkey.com/r/PQDPYMD&apos;,
&apos;Tracy Warren&apos;,&apos;https://www.questionpro.com/t/APqnvZfhPx&apos;,
&apos;Will Eells&apos;,&apos;https://www.surveymonkey.com/r/PJXG379&apos;,
&apos;Margaret Klein&apos;,&apos;https://www.surveymonkey.com/r/6H27BVM&apos;,
&apos;Amanda Olson&apos;,&apos;https://www.surveymonkey.com/r/PQK7Q53&apos;,
&apos;Allison Hull&apos;,&apos;https://www.surveymonkey.com/r/PC3JMH3&apos;,
&apos;Penny Brinks&apos;,&apos;https://www.surveymonkey.com/r/PJCZTZZ&apos;,
&apos;Heather Edwards&apos;,&apos;https://www.surveymonkey.com/r/PJRQBCZ&apos;,
&apos;Tina Turner&apos;,&apos;https://www.surveymonkey.com/r/66JSDW5&apos;,
&apos;Rick Griggs&apos;,&apos;https://www.surveymonkey.com/r/PWP859Q&apos;,
&apos;https://www.questionpro.com/t/APqnvZpSVV&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurveyLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <formula>Opportunity__r.L2O_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <description>Sales&apos;s best understanding of whether we can win</description>
        <label>Win Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25 % or Less</fullName>
                    <default>true</default>
                    <label>25 % or Less</label>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>90% or Higher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>RFP_Requester__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RFP_Requests_Queue</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>RFP_Requester__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>RFP Requests Queue</label>
        <queue>RFP_Requests_Queue</queue>
    </listViews>
    <listViews>
        <fullName>RFP_Requests_Queue_RFP</fullName>
        <filterScope>Queue</filterScope>
        <label>RFP Requests Queue</label>
        <queue>RFP_Requests_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFP_Requests_Queue_RFP1</fullName>
        <filterScope>Queue</filterScope>
        <label>RFP Requests Queue</label>
        <queue>RFP_Requests_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <recordTypes>
        <fullName>Edit</fullName>
        <active>true</active>
        <label>Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>The record is created</description>
        <label>New</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Opp_Stage_for_RFP</fullName>
        <active>true</active>
        <description>User only allow to create opp before opp in proposal or higher</description>
        <errorConditionFormula>((Opportunity_Stage__c == &apos;Prospect&apos; || Opportunity_Stage__c 
 = &apos;Discovery&apos;) &amp;&amp; TEXT(Response_Type__c ) == &apos;RFP&apos;)</errorConditionFormula>
        <errorMessage>Opportunity stage has to be in Proposal or higher before you can create RFP</errorMessage>
    </validationRules>
</CustomObject>